[gd_scene load_steps=8 format=3 uid="uid://d0o7unf8sblwn"]

[ext_resource type="Script" uid="uid://3b13wr3ettbf" path="res://levels/menus/main_menu/main_menu.gd" id="1_s1k5s"]
[ext_resource type="PackedScene" uid="uid://ckfkoclivdl6b" path="res://levels/menus/level_select/level_select.tscn" id="2_0g4bd"]
[ext_resource type="Texture2D" uid="uid://cts1ly866wacc" path="res://assets/textures/settings-icon.png" id="2_dpmub"]
[ext_resource type="LabelSettings" uid="uid://dk5rixitres36" path="res://misc/PageTitleLabelTheme.tres" id="3_2gskt"]
[ext_resource type="Texture2D" uid="uid://dvb6qqkwe8ax1" path="res://assets/textures/play-icon.png" id="3_g0xku"]
[ext_resource type="Texture2D" uid="uid://wsiuryiq4uch" path="res://assets/textures/exit-icon.png" id="4_4l573"]

[sub_resource type="Theme" id="Theme_6huvb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6huvb")
script = ExtResource("1_s1k5s")
level_selected_packed = ExtResource("2_0g4bd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Machine VS Robots"
label_settings = ExtResource("3_2gskt")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 4
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 126

[node name="SettingsBTN" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_dpmub")
flat = true
expand_icon = true

[node name="PlayBTN" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("3_g0xku")
flat = true
expand_icon = true

[node name="QuitBTN" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("4_4l573")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Project game for TPO - 2025/26"
horizontal_alignment = 1

[node name="QuitConfirmation" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Is this goodbye?"
initial_position = 4
size = Vector2i(329, 106)
dialog_text = "You are about to exit Machine VS Robots"
dialog_autowrap = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsBTN" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayBTN" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitBTN" to="." method="_on_quit_btn_pressed"]
[connection signal="confirmed" from="QuitConfirmation" to="." method="_on_quit_confirmation_confirmed"]
